--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,5 +1,10 @@
 @(message: String)
 
-@main("Sistema Integrado CIAS") {
+@main("Login | SIC") {
+  <div class="row">
+    <div class="large-4 medium-4 columns"><p></p></div>
+    <div class="large-4 medium-4 columns panel">
 
+    </div>
+  </div>
 }
