Adicionado topbar à base

--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -11,4 +11,11 @@
     </div>
     <div class="large-4 medium-4 columns"><p></p></div>
   </div>
+
+  <div id="modal_erro" class="reveal-modal small" data-reveal>
+    <h2>Ops...</h2>
+    <p class="lead">Alguma coisa aconteceu</p>
+    <p><b></b></p>
+    <a class="close-reveal-modal">&#215;</a>
+  </div>
 }
