--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -12,6 +12,7 @@
 
     </head>
     <body>
+      @topbar()
       <br>
       <div class="row">
         <div class="large-12" align="center">
@@ -27,10 +28,9 @@
       </div>
 
       @content
-
       <div id="modal_erro" class="reveal-modal small" data-reveal>
         <h2>Ops...</h2>
-        <p class="lead">Alguma coisa aconteceu</p>
+        <p class="lead">Alguma coisa aconteceu!</p>
         <p><b></b></p>
         <a class="close-reveal-modal">&#215;</a>
       </div>
