Validação de login

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>@title</title>
+        <title>@title Sistema Integrado CIAS</title>
         <link rel="stylesheet" media="screen"
           href="@routes.Assets.at("foundation/css/foundation.css")">
 
@@ -41,6 +41,8 @@
         <p><b></b></p>
         <a class="close-reveal-modal">&#215;</a>
       </div>
+
+      @alterarsenha()
 
       <script type="text/javascript"
         src="@routes.Assets.at("foundation/js/vendor/modernizr.js")"></script>
