--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -9,14 +9,14 @@
         formLogin("nomeUsuario"),
         'placeholder -> "Usuário",
         '_label -> null,
-        '_help -> "Seu nome de usuário",
+        '_help -> "",
         'class -> "form-control"
       )
       @helper.inputPassword(
         formLogin("senha"),
         'placeholder -> "Senha",
         '_label -> null,
-        '_help -> "Sua senha",
+        '_help -> "",
         'class -> "form-control"
       )
 
