--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>@title Sistema Integrado CIAS</title>
+        <title>@title - Sistema Integrado CIAS</title>
         <link rel="stylesheet" media="screen"
           href="@routes.Assets.at("foundation/css/foundation.css")">
 
@@ -17,7 +17,7 @@
       <div class="row">
         <div class="large-12" align="center">
           <img src="@routes.Assets.at("images/gdf-logo.png")" alt="Logo GDF"
-            width="10%" align="left">
+            width="12%" align="left">
 
           <div align="right">
             <br><h2><b>Fábrica Social</b></h2>
