--- a/app/views/lista_telefonica.scala.html
+++ b/app/views/lista_telefonica.scala.html
@@ -1,46 +1,47 @@
 @main("Lista Telefônica | SIC"){
+  
+  <div class="row">
+      <nav class="top-bar" data-topbar>
+        <ul class="title-area">
+          <li class="name">
+            <h1><a href="#">Telefones</a></h1>
+          </li>
+          <li class="toggle-topbar menu-icon"><a href="#"></a></li>
+        </ul>
     
-    <div class="row">
-        <div class="large-7 medium-7 small-7 columns">
-            <div class="large-7 medium-7 small-8 columns"><p></p></div>
-            <div class="large-5 medium-5 small-4 columns panel"><p></p></div>
-
-            <div class="row" id="id_agenda" align="center">
-                <table>
-                    <thead>
-                        <th>Dpto.</th>
-                        <th width="350">Nome</th>
-                        <th>Ramal</th>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>DETI</td>
-                            <td>Matheus Fernandes</td>
-                            <td>111</td>
-                        </tr>
-                        <tr>
-                            <td>DETI</td>
-                            <td>Jannsen Oliveira</td>
-                            <td>112</td>
-                        </tr>
-                        <tr>
-                            <td>DETI</td>
-                            <td>Carlos Oliveira</td>
-                            <td>113</td>
-                        </tr>
-                        <tr>
-                            <td>DETI</td>
-                            <td>Flávio Aragão</td>
-                            <td>111</td>
-                        </tr>
-                    </tbody>
-                </table>
+      <section class="top-bar-section">
+        <!-- Right Nav Section -->
+        <ul class="right">
+          <li class="has-form">
+            <div class="row collapse">
+              <div class="large-9 small-9 columns">
+                <input type="text" placeholder="Procurar Funcionário" style="height: auto !important;padding-top: .35rem !important;padding-bottom: .35rem !important;">
+              </div>
+              <div class="large-3 small-3 columns">
+                <a href="#" class="button expand">Buscar</a>
+              </div>
             </div>
-        </div>
-        <div class="large-5 medium-5 small-5 columns panel callout">
-            <h3><b>Departamentos</b></h3><hr>
-            @ramais_departamentos()
-        </div>
+          </li>
+        </ul>
+
+      </section>
+    </nav>
+  </div>
+  
+  <div class="row">
+    <dl class="tabs vertical" data-tab>
+      <dd><a href="#panel1a">DETI - 1234</a></dd>
+      <dd><a href="#panel2a">DECOC - 1234</a></dd>
+    </dl>
+    <div class="tabs-content vertical">
+      <div class="content" id="panel1a">
+        <p>Panel 1.</p>
+      </div>
+      <div class="content" id="panel2a">
+        <p>Panel 2.</p>
+      </div>
+
     </div>
+  </div>
 
 }
