Atualizando view lista_telefonica

--- a/app/views/lista_telefonica.scala.html
+++ b/app/views/lista_telefonica.scala.html
@@ -1,5 +1,5 @@
 @main("Lista Telefônica | SIC"){
-  
+
   <div class="row">
       <nav class="top-bar" data-topbar>
         <ul class="title-area">
@@ -35,7 +35,40 @@
     </dl>
     <div class="tabs-content vertical">
       <div class="content" id="panel1a">
-        <p>Panel 1.</p>
+        <div class="row" align="center">
+          <br>
+          <table>
+            <thead>
+              <th width="200">Departamento</th>
+              <th width="400">Nome</th>
+              <th width="100">Ramal</th>
+            </thead>
+
+            <tbody>
+              <tr>
+                <td>DETI</td>
+                <td>Matheus Souza Fernandes</td>
+                <td>111</td>
+              </tr>
+              <tr>
+                <td>DETI</td>
+                <td>Matheus Souza Fernandes</td>
+                <td>111</td>
+              </tr>
+              <tr>
+                <td>DETI</td>
+                <td>Matheus Souza Fernandes</td>
+                <td>111</td>
+              </tr>
+              <tr>
+                <td>DETI</td>
+                <td>Matheus Souza Fernandes</td>
+                <td>111</td>
+              </tr> 
+            </tbody>
+
+          </table>
+        </div>
       </div>
       <div class="content" id="panel2a">
         <p>Panel 2.</p>
