commit pra ir embora

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -42,7 +42,7 @@
         <a class="close-reveal-modal">&#215;</a>
       </div>
 
-      @alterarsenha()
+      @alterarSenha()
 
       <script type="text/javascript"
         src="@routes.Assets.at("foundation/js/vendor/modernizr.js")"></script>
