--- a/app/views/topbar.scala.html
+++ b/app/views/topbar.scala.html
@@ -10,7 +10,7 @@
       <section class="top-bar-section">
         <ul class="right">
           <li class="has-dropdown">
-            <a href=""></a>
+            <a href="">@session().get("conectado")</a>
             <ul class="dropdown">
               <li><a href="" data-revea-lid="modal_alterar_senha">Alterar Senha</a></li>
             </ul>
