--- a/app/views/atualizarDados.scala.html
+++ b/app/views/atualizarDados.scala.html
@@ -1,3 +1,6 @@
+@import models.pessoa.funcionario.Funcionario
+@(funcionarioConectado : Form[Funcionario])
+
 @main("Atualizar Dados | SIC"){
   <div class="row" align="center">
     <h2>Atualizar Dados</h2><hr>
