--- a/app/views/alterarSenha.scala.html
+++ b/app/views/alterarSenha.scala.html
@@ -1,6 +1,6 @@
 <div id="modal_alterar_senha" class="reveal-modal small" data-reveal>
   <h2>Alterar Senha</h2><hr>
-  <form action="/login/alterar-senha/" method="POST" data-abide>
+  <form action="" method="POST" data-abide>
     <div class="row">
       <div class="large-2 medium-2 columns"><p></p></div>
       <div class="large-8 medium-8 columns password-field">
