--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -9,6 +9,8 @@
         <title>@title - Sistema Integrado CIAS</title>
         <link rel="stylesheet" media="screen"
           href="@routes.Assets.at("foundation/css/foundation.css")">
+        <link rel="shortcut icon" type="image/png"
+          href="@routes.Assets.at("images/gdf-logo.png")" />
 
     </head>
     <body>
