Adicionado botão para lista telefônica

--- a/app/views/dashboard.scala.html
+++ b/app/views/dashboard.scala.html
@@ -1,2 +1,7 @@
 @main("Dashboard | SIC") {
+  <div class="row">
+    <a class="button" href="/telefones">
+      Lista telefônica
+    </a>
+  </div>
 }
