--- a/app/views/topbar.scala.html
+++ b/app/views/topbar.scala.html
@@ -12,6 +12,7 @@
           <li class="has-dropdown">
             <a href="">@session().get("conectado")</a>
             <ul class="dropdown">
+              <li><a href="/atualizar/dados" >Atualizar Dados</a></li>
               <li><a href="/atualizar/senha" data-revea-lid="modal_alterar_senha">Alterar Senha</a></li>
             </ul>
           </li>
