--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>@title - Sistema Integrado CIAS</title>
         <link rel="stylesheet" media="screen"
-          href="@routes.Assets.at("foundation/css/foundation.css")">
+          href="@routes.Assets.at("css/style.css")">
         <link rel="shortcut icon" type="image/png"
           href="@routes.Assets.at("images/gdf-logo.png")" />
 
