--- a/app/views/dashboard.scala.html
+++ b/app/views/dashboard.scala.html
@@ -1,7 +1,13 @@
 @main("Dashboard | SIC") {
   <div class="row">
-    <a class="button" href="/telefones">
-      Lista telefônica
-    </a>
+    <div class="large-4 small-4 columns">
+      <p></p>
+    </div>
+    <div class="large-4 small-4 columns">
+      <p><a class="button expand" href="/telefones">Lista telefônica</a></p>
+    </div>
+    <div class="large-4 small-4 columns">
+      <p></p>
+    </div>
   </div>
 }
